// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`W3NCreateInfo should match the snapshot for off-chain did 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Create web3name
    </h1>
    <p
      class="subline"
    >
      Claim a custom name to represent your DID
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Light DID Identity
        </span>
      </div>
    </section>
    <p
      class="info"
    >
      web3name is a custom name you create to represent your DID and personalize your digital identity. web3names can be linked via your DID with your SocialKYC credentials and with addresses across multiple blockchains.
    </p>
    <p
      class="warning"
    >
      You need a DID to use this feature.
    </p>
    <p
      class="buttonsLine"
    >
      <button
        class="back"
        type="button"
      >
        Back
      </button>
      <a
        class="next"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/upgrade"
      >
        Get your DID
      </a>
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`W3NCreateInfo should match the snapshot for on-chain did 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Create web3name
    </h1>
    <p
      class="subline"
    >
      Claim a custom name to represent your DID
    </p>
    <section
      class="container"
    >
      <div
        class="avatar fullDid"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity with on-chain DID and lots of coins
        </span>
      </div>
    </section>
    <p
      class="didLine"
    >
      <input
        aria-label="DID"
        class="long"
        readonly=""
        value="did:kilt:4oeJ76hdj84xnwCNqijUHUCTmfwXgSZ4vmxLEiTEYgQdBCcZ"
      />
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <p
      class="info"
    >
      web3name is a custom name you create to represent your DID and personalize your digital identity. web3names can be linked via your DID with your SocialKYC credentials and with addresses across multiple blockchains.
    </p>
    <p
      class="buttonsLine"
    >
      <button
        class="back"
        type="button"
      >
        Back
      </button>
      <a
        class="next"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/web3name/create/form"
      >
        Continue
      </a>
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;
